# ml_time_series_forecasting_course

./: README.md  pyproject.toml  requirements.txt
lab1_statistical_models/: lab4-stats.html  lab4-stats.ipynb  notebook_empty copy.ipynb  notebook_empty.ipynb  notebook_filled.ipynb  polish_inflation.csv
lab2_neural_models/: notebook_empty.ipynb
