[tool.poetry]
name = "ml-time-series-forecasting-course-solutions"
version = "0.1.0"
description = ""
authors = ["j-adamczyk <jakub.adamczyk@placewise.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

jupyter = "*"
holidays = "0.*"
matplotlib = "3.*"
neuralforecast = "1.*"
pandas = "2.*"
pmdarima = "2.*"
pyarrow = "18.*"
python-dateutil = "2.*"
scikit-learn = "1.5.*"
seaborn = "0.13.*"
sktime = "0.34.*"
statsforecast = "1.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
